# PrisonierDilemm

./: .gitignore  ARCHITECTURE.md  Makefile  PLAN.md  README.md  SUITE.md  config.yaml  dashboard.py  pyproject.toml
dbt_dilemma/: .user.yml  dbt_project.yml  profiles.yml
dbt_dilemma/models/: sources.yml
dbt_dilemma/models/gold/: gold_head_to_head.sql  gold_match_summary.sql  gold_run_comparison.sql  gold_strategy_metrics.sql  gold_turn_evolution.sql
dbt_dilemma/models/staging/: stg_matches.sql  stg_turns.sql
docs/: delta_lake_design.md  engine.md  fil_rouge.md  generate.md  load.md  mistral_agent.md  strategies_base.md  strategies_codees.md  transform.md
src/: engine.py  generate.py  load.py  transform.py
src/strategies/: __init__.py  always_cooperate.py  always_defect.py  base.py  grim_trigger.py  mistral_agent.py  pavlov.py  random_strategy.py  tit_for_tat.py
tests/: test_strategies.py
utilsSujet/JailProject/: TranscritpVideoSujet.md
